--- a/package.json
+++ b/package.json
@@ -7,24 +7,24 @@
 	"author": "miyazawa famibee <famibee@gmail.com> (https://famibee.blog.fc2.com/)",
 	"license": "MIT",
 	"dependencies": {
-		"image-size": "^0.7.5",
+		"image-size": "^0.8.3",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-gif-player": "^0.4.2",
-		"react-lazyload": "^2.6.7",
+		"react-lazyload": "^3.0.0",
 		"viewport-observer": "^2.3.0"
 	},
 	"devDependencies": {
-		"@types/react": "^16.9.32",
-		"@types/react-dom": "^16.9.6",
+		"@types/react": "^16.9.41",
+		"@types/react-dom": "^16.9.8",
 		"@types/react-lazyload": "^2.6.0",
 		"awesome-typescript-loader": "^5.2.1",
-		"electron": "^5.0.13",
-		"source-map-loader": "^0.2.4",
-		"typescript": "^3.8.3",
-		"webpack": "^4.42.1",
-		"webpack-cli": "^3.3.11",
-		"webpack-dev-server": "^3.10.3"
+		"electron": "^9.1.0",
+		"source-map-loader": "^1.0.1",
+		"typescript": "^3.9.6",
+		"webpack": "^4.43.0",
+		"webpack-cli": "^3.3.12",
+		"webpack-dev-server": "^3.11.0"
 	},
 	"scripts": {
 		"install": "npm run webpack:dev",
@@ -34,8 +34,9 @@
 		"webpack:dev": "webpack --mode development --config ./core/webpack.config.js",
 		"webpack:dev:w": "webpack --mode development --watch --config ./core/webpack.config.js",
 		"watch:wds": "webpack-dev-server --config ./core/wds.config.js",
-		"npm_check_updates_do": "ncu -a && npm update && npm i -D",
+		"npm_check_updates_do": "ncu -a && npm update && npm run webpack:dev",
 		"stats": "npx webpack --config ./core/webpack.config.js --profile --json > stats.json && npx webpack-bundle-size-analyzer stats.json",
+		"rebuild": "rm -rf node_modules && rm package-lock.json && npm cache clear --force && npm i && npm run webpack:dev",
 		"webpack:pro": "webpack --mode production --config ./core/webpack.config.js",
 		"pack:win": "npm run webpack:pro && electron-builder ./build/win32-x64 --platform=win --arch=x64",
 		"pack:mac": "npm run webpack:pro && electron-builder ./build/darwin-x64 --platform=mac --arch=x64"
